k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic
spec:
  ingressClassName: nginx
  rules:
    - host: petclinic.local
      http:
        paths:
          - path: /petclinic
            pathType: Prefix
            backend:
              service:
                name: petclinic-service
                port:
                  number: 80
